--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -1,5 +1,6 @@
 <%- include('../../shared/includes/head', {pageTitle: 'All Products'})//이거 하드코드} %>
     <link rel="stylesheet" href="/styles/products.css">
+    <script src="/scripts/product-management.js" defer></script>
 </head>
 
 <body>
