--- a/views/shared/includes/product-item.ejs
+++ b/views/shared/includes/product-item.ejs
@@ -7,6 +7,11 @@
       <a class="btn btn-alt" href="/admin/products/<%=product.id%>">Edit</a>
       <button class="btn btn-alt" data-productid="<%=product.id%>" data-csrf="<%=locals.csrfToken%>">Delete</button>
     </div>
+    <% } else { %>
+      <div class="product-item-actions">
+        <a class="btn btn-alt" href="/products/<%=product.id%>">View</a>
+      </div>
     <% } %>
   </div>
 </article>
+ 
