--- a/public/styles/products.css
+++ b/public/styles/products.css
@@ -1,16 +1,15 @@
 #products-grid {
-  display: grid;
   margin: var(--space-8) auto;
+  display: grid;
   grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-  gap: var(--space-2);
+  gap: var(--space-4);
 }
 
 .product-item {
-  text-align: center;
   border-radius: var(--border-radius-medium);
+  text-align: center;
   background-color: var(--color-gray-600);
   overflow: hidden;
-  margin: var(--space-4);
 }
 
 .product-item img {
@@ -21,12 +20,10 @@
 
 .product-item-content {
   padding: var(--space-4);
-  box-sizing: border-box;
-  justify-content: space-between; /* 추가 */
 }
 
 .product-item-content h2 {
-  font-size: 1.25rem;
+  font-size: 1.15rem;
   margin: var(--space-2) 0;
 }
 
@@ -34,11 +31,47 @@
   display: flex;
   gap: var(--space-2);
   margin-top: var(--space-4);
+  justify-content: center;
 }
 
-.btn {
-  flex: 1;
+#product-details header {
+  margin-top: var(--space-8);
+  padding: var(--space-8);
+  background-color: var(--color-gray-600);
+  gap: var(--space-8);
+}
+
+#product-details img {
+  width: 100%;
+  height: 6rem;
+  object-fit: contain;
+  border-radius: var(--border-radius-medium);
+  border: 1px solid var(--color-gray-100);
+}
+
+#product-info {
   text-align: center;
-  min-width: 0px;
-  text-align: center;
+}
+
+#product-description {
+  background-color: var(--color-primary-500-bg);
+  padding: var(--space-8);
+  white-space: pre-wrap;
+}
+
+@media (min-width: 48rem) {
+  #product-details header {
+    display: flex;
+  }
+
+  #product-details img {
+    width: 20rem;
+    height: 15rem;
+    transform: rotateZ(-10deg);
+    margin: var(--space-8);
+  }
+
+  #product-info {
+    text-align: left;
+  }
 }
