--- a/views/customer/products/product-details.ejs
+++ b/views/customer/products/product-details.ejs
@@ -1,6 +1,8 @@
-<%- include('../../shared/includes/head', {pageTitle: 'All Products'})//이거 하드코드} %>
+<%- include('../../shared/includes/head', {pageTitle: ';yapo' })//이거 하드코드} %>
 <link rel="stylesheet" href="/styles/products.css">
 <link rel="stylesheet" href="/styles/forms.css">
+<script src="/scripts/cart-management.js" defer></script>
+
 </head>
 
 <body>
@@ -9,10 +11,10 @@
     <main id="product-details">
         <header>
             <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
-            <div id="product-infow">
+            <div id="product-info">
                 <h1><%= product.title %></h1>
                 <p><%= product.price %></p>
-                <button>Add to Cart</button>
+                <button class="btn" data-csrf="<%= locals.csrfToken %>" data-productid="<%= product.id %>" >Add to Cart</button>
             </div>
         </header>
 
